--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,8 +21,9 @@ dependencies:
   cupertino_icons: ^0.1.2
   web_socket_channel: ^1.0.9
   shared_preferences: ^0.4.3
+  dio: ^1.0.9
   http: ^0.12.0
-
+ 
 dev_dependencies:
   flutter_test:
     sdk: flutter
