--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,7 +22,8 @@ dependencies:
   web_socket_channel: ^1.0.9
   shared_preferences: ^0.4.3
   dio: ^1.0.9
-  http: ^0.12.0
+  http: ^0.12.0 
+  flutter_map:
  
 dev_dependencies:
   flutter_test:
